--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
 }
 
 .news_contant-item {
-    width: 262px;
+    width: calc(90% / 3);
 }
 
 .news_contant-link {
@@ -444,6 +444,7 @@ body {
     border-radius: 3px;
     box-shadow: 0px 0px 2.667px 0px rgba(0, 0, 0, 0.50);
     height: 175px;
+    object-fit: cover;
 }
 
 .news-data {
